--- a/Examples/VisualBasic/VisualBasic.vbproj
+++ b/Examples/VisualBasic/VisualBasic.vbproj
@@ -57,6 +57,7 @@
     <Compile Include="ProgrammersGuide\Presentations\ConvertSpecificSlideToPDF.vb" />
     <Compile Include="ProgrammersGuide\Presentations\ConvertToPasswordProtectedPDF.vb" />
     <Compile Include="ProgrammersGuide\Presentations\ConvertToTIFFWithCustomImagePixelFormat.vb" />
+    <Compile Include="ProgrammersGuide\Presentations\CreateNewPresentation.vb" />
     <Compile Include="ProgrammersGuide\Presentations\ExportMediaFilestohtml.vb" />
     <Compile Include="ProgrammersGuide\Presentations\GetFileFormat.vb" />
     <Compile Include="ProgrammersGuide\Presentations\SaveAsPredefinedViewType.vb" />
