--- a/Examples/CSharp/CSharp.csproj
+++ b/Examples/CSharp/CSharp.csproj
@@ -63,6 +63,7 @@
     <Compile Include="ProgrammersGuide\Presentations\PresentationToTIFFWithDefaultSize.cs" />
     <Compile Include="ProgrammersGuide\Presentations\SaveAsPredefinedViewType.cs" />
     <Compile Include="ProgrammersGuide\Presentations\SaveToStream.cs" />
+    <Compile Include="ProgrammersGuide\Presentations\SetZoom.cs" />
     <Compile Include="ProgrammersGuide\Presentations\VerifyingPresentationWithoutloading.cs" />
     <Compile Include="ProgrammersGuide\Shapes\ChangeOLEObjectData.cs">
       <SubType>Code</SubType>
@@ -173,7 +174,6 @@
     <None Include="ProgrammersGuide\Charts\Data\ExistingChart.pptx" />
     <None Include="ProgrammersGuide\Presentations\Data\AccessOpenDoc.odp" />
     <None Include="ProgrammersGuide\Presentations\Data\DemoFile.pptx" />
-    <None Include="ProgrammersGuide\Presentations\Data\NotesFile.pptx" />
     <None Include="ProgrammersGuide\Presentations\Data\PPTtoPPTX.ppt" />
     <None Include="ProgrammersGuide\Presentations\Data\Convert_HTML.pptx" />
     <None Include="ProgrammersGuide\Presentations\Data\Convert_Tiff_Custom.pptx" />
